# Realistic-Stamina-System

./: .gitattributes  .gitignore  1.c  2.c  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONFIG_APPLICATION_VERIFICATION.md  CONTRIBUTING.md  DEBUG_AND_HINT_SWITCH_VERIFICATION.md  FILE_SUMMARY.txt  README.md  README_CN.md  README_EN.md  README_v5.md  RSS_V5_项目总结.md  RealisticStaminaSystem.json  WINDOWS_COMMANDS.md  WINDOWS_QUICK_START.md  WORKSHOP_CHANGENOTE_v3.22.1.txt  WORKSHOP_CHANGENOTE_v3.22.10.txt  WORKSHOP_CHANGENOTE_v3.22.5.txt  WORKSHOP_CHANGENOTE_v3.22.6.txt  WORKSHOP_CHANGENOTE_v3.22.7.txt  WORKSHOP_CHANGENOTE_v3.22.8.txt  WORKSHOP_CHANGENOTE_v3.23.0.txt  WORKSHOP_CHANGENOTE_v3.23.1.txt  WORKSHOP_CHANGENOTE_v6.0.0.txt  WORKSHOP_DESCRIPTION_EN.txt  addon.gproj  optimized_rss_config_balanced_complete.json  optimized_rss_config_balanced_super.json  optimized_rss_config_playability_optuna.json  optimized_rss_config_playability_super.json  optimized_rss_config_realism_complete.json  optimized_rss_config_realism_super.json  session_20260507_165022.json  stability_bug_report.json  todo.md  漏洞报告.md  (+1 more)
.deepseek/: instructions.md
GUI/: GUI.layout
docs/: BIGBANG_READINESS.md  P0_ACE1_Product_Notes.md  P0_CFG1_Acceptance_Checklist.md  RSS_AI_行为说明.md  RSS_AI体力集成全盘设计方案.md  RSS_API.md  RSS_CODE_REVIEW_REPORT_v3.22.6.md  RSS_CODING_STANDARDS.md  RSS_v5_代码清理报告.md  (+36 more)
tools/rss_sim/: .gitignore  Cargo.toml  README.md  pyproject.toml
tools/rss_sim/src/: constants.rs  constraints.rs  cp_wprime.rs  drain.rs  environment.rs  fatigue.rs  lib.rs  math.rs  metabolism.rs  mission.rs  twin.rs
(+477 files in other folders)
