[package]
name = "rss_sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "rss_sim"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[[bin]]
name = "sim_cp_cruise"
path = "src/bin/sim_cp_cruise.rs"
required-features = []

[[bin]]
name = "sim_bug_hunt"
path = "src/bin/sim_bug_hunt.rs"
required-features = []

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py311"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
